--- a/src/components/Shared/Header/Header.css
+++ b/src/components/Shared/Header/Header.css
@@ -31,6 +31,11 @@
   bottom: -10px;
 }
 
+.nav-selected {
+  font-weight: 700;
+  color: #e29578 !important;
+}
+
 @media only screen and (max-width: 1200px) {
   .nav-link {
     font-size: 16px;
