--- a/src/components/Shared/Header/Header.css
+++ b/src/components/Shared/Header/Header.css
@@ -36,6 +36,13 @@
   color: #e29578 !important;
 }
 
+.user-img {
+  width: 50px;
+  border-radius: 50%;
+  padding: 5px;
+  border: 1px solid #073b4c;
+}
+
 @media only screen and (max-width: 1200px) {
   .nav-link {
     font-size: 16px;
