little bit responsive

--- a/src/components/Pages/MyOrders/SingleOrder/SingleOrder.css
+++ b/src/components/Pages/MyOrders/SingleOrder/SingleOrder.css
@@ -1,18 +1,14 @@
 .order-details-box {
   border: 1px solid #edf6f9;
-  border-radius: 20px;
-  padding: 20px;
+  border-radius: 10px;
+  padding: 20px 10px;
 }
 
 .order-img {
-  width: 200px;
-  border-radius: 20px;
+  border-radius: 10px;
 }
 
 @media only screen and (max-width: 1200px) {
-  .order-img {
-    width: 150px;
-  }
   .serive-title {
     font-size: 18px;
   }
@@ -20,9 +16,6 @@
 @media only screen and (max-width: 768px) {
   .order-details-box {
     justify-content: center;
-  }
-  .order-img {
-    width: 200px;
   }
 }
 @media only screen and (max-width: 520px) {
@@ -32,9 +25,7 @@
     gap: 10px !important;
     text-align: center;
   }
-  .order-img {
-    width: 100%;
-  }
+
   .serive-title {
     font-size: 20px;
     margin-top: 10px !important;
