--- a/src/components/Pages/Home/Banner/Banner.css
+++ b/src/components/Pages/Home/Banner/Banner.css
@@ -34,5 +34,14 @@
 @media only screen and (max-width: 400px) {
   .banner-title {
     font-size: 24px;
+    margin: 0 !important;
+  }
+  .banner-sub-title {
+    font-size: 14px;
+    margin: 0 !important;
+  }
+  .banner-text {
+    font-size: 14px;
+    margin-bottom: 10px !important;
   }
 }
