--- a/src/components/Shared/Header/Header.css
+++ b/src/components/Shared/Header/Header.css
@@ -43,7 +43,11 @@
   border: 1px solid #073b4c;
 }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 1200px) and (min-width: 992px) {
+  .nav-brand {
+    display: inline-block;
+    width: 15%;
+  }
   .nav-link {
     font-size: 16px;
   }
