--- a/src/components/Pages/AddService/AddService.css
+++ b/src/components/Pages/AddService/AddService.css
@@ -20,3 +20,14 @@ textarea {
   background: transparent;
   color: #006d77;
 }
+
+@media only screen and (max-width: 1000px) {
+  .add-service-form {
+    width: 80%;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .add-service-form {
+    width: 100%;
+  }
+}
